--- a/pagamentos/src/main/resources/application.properties
+++ b/pagamentos/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=pagamentos
+
+spring.datasource.url=jdbc:mysql://localhost/alurafood_pagamentos?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+
