--- a/pagamentos/src/main/resources/application.properties
+++ b/pagamentos/src/main/resources/application.properties
@@ -6,4 +6,8 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.application.name=pagamentos-ms
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
