--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -10,4 +10,5 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.application.name=pedidos-ms
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+server.port=0
 
