Iplementando CircuitBreaker e FallBack em pagamentos

--- a/pagamentos/src/main/resources/application.properties
+++ b/pagamentos/src/main/resources/application.properties
@@ -14,3 +14,6 @@ eureka.instance.instance-id=${spring.application.name}:${random.int}
 
 server.port=0
 
+resilience4j.circuitbreaker.instances.autalizaPedido.slidingWindowSize: 3
+resilience4j.circuitbreaker.instances.autalizaPedido.mininumNumberofCalls: 2
+resilience4j.circuitbreaker.instances.autalizaPedido.waitDurationInOpenState: 50s
