--- a/pedidos/pom.xml
+++ b/pedidos/pom.xml
@@ -83,11 +83,11 @@
 			<artifactId>spring-data-commons</artifactId>
 			<version>3.3.5</version>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-			<version>4.1.0</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.cloud</groupId>-->
+<!--			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
+<!--			<version>4.1.0</version>-->
+<!--		</dependency>-->
 
 	</dependencies>
 
