--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -1,15 +1,18 @@
+spring.application.name=pedidos-ms
 
 spring.datasource.url=jdbc:mysql://localhost:3306/alurafood-pedidos?createDatabaseIfNotExist=true
+#spring.datasource.username=root
+#spring.datasource.password=root
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=my-secret-pw
+
 
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-spring.application.name=pedidos-ms
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-eureka.instance.instance-id=${spring.application.name}:${random.int}
-server.port=0
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#eureka.instance.instance-id=${spring.application.name}:${random.int}
+#server.port=0
 
