Criando primeira fila de pagamentos confirmados no Rabbitmq

--- a/pagamentos/src/main/resources/application.properties
+++ b/pagamentos/src/main/resources/application.properties
@@ -17,3 +17,8 @@ server.port=0
 resilience4j.circuitbreaker.instances.autalizaPedido.slidingWindowSize: 3
 resilience4j.circuitbreaker.instances.autalizaPedido.mininumNumberofCalls: 2
 resilience4j.circuitbreaker.instances.autalizaPedido.waitDurationInOpenState: 50s
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.user=guest
+spring.rabbitmq.password=guest
