--- a/pedidos/src/main/resources/application.properties
+++ b/pedidos/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=pedidos-ms
 
 spring.datasource.url=jdbc:mysql://localhost:3306/alurafood-pedidos?createDatabaseIfNotExist=true
-#spring.datasource.username=root
 #spring.datasource.password=root
 spring.datasource.username=root
-spring.datasource.password=my-secret-pw
+#spring.datasource.password=my-secret-pw
+spring.datasource.password=root
 
 
 spring.jpa.show-sql=true
@@ -12,7 +12,11 @@ spring.jpa.show-sql=true
 
 #eureka.client.register-with-eureka=true
 #eureka.client.fetch-registry=true
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-#eureka.instance.instance-id=${spring.application.name}:${random.int}
-#server.port=0
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.instance.instance-id=${spring.application.name}:${random.int}
+server.port=0
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
